[fix] upload image UI

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -23,6 +23,7 @@
 </head>
 <body>
 <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
+<script src="https://widget.cloudinary.com/v2.0/global/all.js" type="text/javascript"></script>
 <noscript>
     You need to enable JavaScript to run this app.
 </noscript>
