--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <link rel="stylesheet" href="./css/fontawesome.css">
+    <link rel="stylesheet" href="./css/semantic.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
     <!--
@@ -24,7 +25,7 @@
 </head>
 <body>
 <!--<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>-->
-<script src="https://widget.cloudinary.com/v2.0/global/all.js" type="text/javascript"></script>
+<!--<script src="https://widget.cloudinary.com/v2.0/global/all.js" type="text/javascript"></script>-->
 <noscript>
     You need to enable JavaScript to run this app.
 </noscript>
